@@ -30,6 +30,8 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
     is created if the password is changed and passwd requires a
     shadow entry.
   * Add --root option.
+- chsh
+  * Add --root option.
 - faillog
   * The -l, -m, -r, -t options only act on the existing users, unless -a is
     specified.
