@@ -39,6 +39,9 @@
 	* NEWS, src/groupmems.c, man/groupmems.8.xml: Add --root option.
 	Open syslog after the potential chroot.
 	* src/groupmems.c: The getopt index of long options is not used.
+	* NEWS, src/chsh.c, man/chsh.1.xml: Add --root option.
+	chsh's usage split in smaller messages.
+	* src/chsh.c: The getopt index of long options is not used.
 
 2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>
 
